table maps to object keys on click!

--- a/web/index.html
+++ b/web/index.html
@@ -19,16 +19,16 @@
 <body>
     <p>hello world</p>
     <table>
-        <tr class="1"><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr class="2"><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+        <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="3"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="4"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="5"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="6"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="7"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="8"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
     </table>
     
 </body>
