cursor change style

--- a/web/index.html
+++ b/web/index.html
@@ -30,6 +30,7 @@
         <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
     </table>
-    
+    <br>
+    <table id="3-letter"><tr><td>R</td><td>O</td><td>W</td></tr></table>
 </body>
 </html>
