adding rows to the board!

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
         <!-- App JS -->
         <script type="text/javascript" src="../index.js"></script>
         <script type="text/javascript" src="../clicks.js"></script>
-
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,5 +32,7 @@
     </table>
     <br>
     <table id="3-letter"><tr><td>R</td><td>O</td><td>W</td></tr></table>
+    <br>
+    <table id="4-letter"><tr><td>C</td><td>O</td><td>L</td><td>L</td></tr></table>
 </body>
 </html>
