--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,20 @@
 </head>
 <body>
     <p>hello world</p>
-    <table>
+    <table class="enemyBoard">
+        <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="3"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="4"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="5"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="6"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="7"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="8"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+    </table>
+    <br>
+    <table class="playerBoard">
         <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         <tr class="3"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
