more words/ships

--- a/web/index.html
+++ b/web/index.html
@@ -44,8 +44,16 @@
         <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
     </table>
     <br>
-    <table id="3-letter"><tr><td>R</td><td>O</td><td>W</td></tr></table>
-    <br>
-    <table id="4-letter"><tr><td>C</td><td>O</td><td>L</td><td>L</td></tr></table>
 </body>
+<footer>
+    <table id="2-letter"><tr><td>O</td><td>I</td></tr></table>
+    <br>
+    <table id="3-letter"><tr><td>S</td><td>U</td><td>B</td></table>
+    <br>
+    <table id="4-letter"><tr><td>S</td><td>H</td><td>I</td><td>P</td></tr></table>
+    <br>
+    <table id="5-letter"><tr><td>B</td><td>I</td><td>L</td><td>G</td><td>E</td></tr></table>
+    <br>
+    <table id="6-letter"><tr><td>A</td><td>N</td><td>C</td><td>H</td><td>O</td><td>R</td></tr></table>
+</footer>
 </html>
