--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
         <!-- App JS -->
         <script type="text/javascript" src="../index.js"></script>
         <script type="text/javascript" src="../clicks.js"></script>
+        <script type="text/javascript" src="../placeEnemies.js"></script>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
