moved AI into new file

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="../index.js"></script>
         <script type="text/javascript" src="../clicks.js"></script>
         <script type="text/javascript" src="../placeEnemies.js"></script>
+        <script type="text/javascript" src="../enemyAI.js"></script>
     
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
