swapping in 2 word into html from JS

--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
     <br>
 </body>
 <footer>
-    <table id="2-letter"><tr><td>O</td><td>I</td></tr></table>
+    <table id="2-letter"></table>
     <br>
     <table id="3-letter"><tr><td>S</td><td>U</td><td>B</td></table>
     <br>
