--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
 <footer>
     <table id="2-letter"></table>
     <br>
-    <table id="3-letter"><tr><td>S</td><td>U</td><td>B</td></table>
+    <table id="3-letter"></table>
     <br>
     <table id="4-letter"><tr><td>S</td><td>H</td><td>I</td><td>P</td></tr></table>
     <br>
