4, 5, and 6 added from JS

--- a/web/index.html
+++ b/web/index.html
@@ -52,10 +52,10 @@
     <br>
     <table id="3-letter"></table>
     <br>
-    <table id="4-letter"><tr><td>S</td><td>H</td><td>I</td><td>P</td></tr></table>
+    <table id="4-letter"></table>
     <br>
-    <table id="5-letter"><tr><td>B</td><td>I</td><td>L</td><td>G</td><td>E</td></tr></table>
+    <table id="5-letter"></table>
     <br>
-    <table id="6-letter"><tr><td>A</td><td>N</td><td>C</td><td>H</td><td>O</td><td>R</td></tr></table>
+    <table id="6-letter"></table>
 </footer>
 </html>
