--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello world</p>
+    <p>Scrabble Ship!</p>
     <table class="enemyBoard">
         <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
