a little basic styling

--- a/web/index.html
+++ b/web/index.html
@@ -33,29 +33,31 @@
         <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
     </table>
     <br>
-    <table class="playerBoard">
-        <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="3"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="4"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="5"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="6"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="7"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="8"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-        <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
-    </table>
-    <br>
+    <div class="playerBoard-words">
+        <table class="playerBoard">
+            <tr class="1"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="2"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="3"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="4"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="5"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="6"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="7"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="8"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+            <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
+        </table>
+        <br>
+        <div>
+            <table id="2-letter"></table>
+            <br>
+            <table id="3-letter"></table>
+            <br>
+            <table id="4-letter"></table>
+            <br>
+            <table id="5-letter"></table>
+            <br>
+            <table id="6-letter"></table>
+        </div>
+    </div>
 </body>
-<footer>
-    <table id="2-letter"></table>
-    <br>
-    <table id="3-letter"></table>
-    <br>
-    <table id="4-letter"></table>
-    <br>
-    <table id="5-letter"></table>
-    <br>
-    <table id="6-letter"></table>
-</footer>
 </html>
