--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@
             <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         </table>
         <br>
-        <div>
+        <div class="words">
             <table id="2-letter"></table>
             <br>
             <table id="3-letter"></table>
