--- a/web/index.html
+++ b/web/index.html
@@ -32,10 +32,15 @@
             <tr class="9"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
             <tr class="10"><td class="a"></td><td class="b"></td><td class="c"></td><td class="d"></td><td class="e"></td><td class="f"></td><td class="g"></td><td class="h"></td><td class="i"></td><td class="j"></td></tr>
         </table>
-        <div>
+        <div class="controlsText">
             <h3>Scrabble Ship!</h3>
-            <p>Place your words on the bottom grid then try and find the enemy words on the top.</p>
-            <div class="controls">
+            <p>Place your words on the bottom grid then try and find the enemy words on the top before they find yours!</p>
+            <ul>
+                <li>left click to place word</li>
+                <li>mouse wheel to rotate ship</li>
+                <li>right click to cancel</li>
+            </ul>
+            <div class="controlsImages">
                 <img src="../mouseLeft.png" alt="left mouse">
                 <img src="../mouseWheel.png" alt="mouse wheel">
                 <img src="../mouseRight.png" alt="right mouse">
