moving mouse images

--- a/web/index.html
+++ b/web/index.html
@@ -41,9 +41,9 @@
                 <li>right click to cancel</li>
             </ul>
             <div class="controlsImages">
-                <img src="../mouseLeft.png" alt="left mouse">
-                <img src="../mouseWheel.png" alt="mouse wheel">
-                <img src="../mouseRight.png" alt="right mouse">
+                <img src="../images/mouseLeft.png" alt="left mouse">
+                <img src="../images/mouseWheel.png" alt="mouse wheel">
+                <img src="../images/mouseRight.png" alt="right mouse">
             </div>
         </div>
     </div>
